--- a/index.html
+++ b/index.html
@@ -305,5 +305,15 @@ document.getElementById('cart-toggle').addEventListener('click', () => {
         });
 
     </script>
+	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J7Q9QTQMC2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J7Q9QTQMC2');
+</script>
   </body>
 </html>
